@@ -1,4 +1,6 @@
 5.7.6
+NEW
+    - Added Talent Set Manager support (button on hero panel)
 FIXES
     - Fix castbar latency issue
     - Fix rested expbar issue
